#MIT License
#
#Copyright (c) 2021 S.J.R. van Schaik
#
#Permission is hereby granted, free of charge, to any person obtaining a copy
#of this software and associated documentation files (the "Software"), to deal
#in the Software without restriction, including without limitation the rights
#to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#copies of the Software, and to permit persons to whom the Software is
#furnished to do so, subject to the following conditions:
#
#The above copyright notice and this permission notice shall be included in all
#copies or substantial portions of the Software.
#
#THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
#SOFTWARE.
[package]
name = "windows-kernel"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = ["alloc"]
alloc = []
system = []


[dependencies]
windows-kernel-sys = { path = "../windows-kernel-sys" }
widestring = { version = "1.0.2", default-features = false, features = ["alloc"] }
bitflags = "1.3"
cty = "0.2"
hashbrown = "0.14"
cfg-if = "1.0.0"
crossbeam = { version = "0.8.2", default-features = false, features = ["alloc"] }
lock_api = "0.4.11"
smallvec = "1.11.2"
pin-project = "1.1.1"
cooked-waker = "5.0.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-channel = { version = "0.3.29", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
uid = "0.1.7"
